--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,80 @@
 // Specific CSS for your home-page
+.banner {
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("https://res.cloudinary.com/dqhqgbpqe/image/upload/v1668784530/my_pictures/maxresdefault_uszwbx.jpg");
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-size: cover;
+  border: 0px solid black;
+  padding: 150px;
+  text-align: center;
+  color: white;
+}
+
+.list-image {
+  height: 200px;
+  width: 400px;
+
+}
+.main-container{
+  background-color: black;
+  align-content: center;
+}
+.btn {
+  border-radius: 5px;
+}
+
+.list-item {
+  padding: 50px;
+  border: 5px solid black;
+}
+
+.one-list {
+  padding: 100px;
+  color: white;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  border: 5px solid center;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  box-sizing: border-box;
+}
+
+li {
+  list-style: none;
+}
+
+.ul-home {
+  margin: auto;
+}
+a {
+  font-size: x-large;
+  font-style: normal;
+  color: white;
+  text-decoration: none;
+}
+
+.container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.home-btn {
+  background-color: $warning;
+  display: inline-block;
+  width: 15rem;
+  margin: auto;
+}
+
+.first-row{
+  border: 1px double black;
+  box-shadow: 0px 0px 10px 10px rgba(44, 44, 44, 0.5);
+  border-radius: 5px;
+  margin: 15px;
+}
+
+.delete-button {
+  text-align: right;
+}
