--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,28 @@
   </head>
 
   <body>
+<nav class="navbar navbar-expand-lg bg-dark sticky-top border-bottom border-warning">
+  <div class="container-fluid">
+    <a class="navbar-brand text-bg-dark" href="#">Re-Watchlist</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active text-bg-dark" aria-current="page" href="/lists">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-bg-dark" href="/lists/new">New List</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-warning" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
     <%= yield %>
   </body>
 </html>
