--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,15 +1,32 @@
+<div class="main-container">
 <div class="banner">
-<h1>OverWatchList</h1>
+  <h1>The only Watchlist you'll ever need</h1>
 </div>
-
-<ul>
-  <% @lists.each do |list| %>
-  <li><%= link_to list.name, "/lists/#{list.id}" %></li>
-  <p><%= link_to "Delete list",
-    list_path(list),
-    data: {turbo_method: :delete, turbo_confirm: "Delete #{list.name}?"} %>
-  <% end %> </p>
-</ul>
-
-
-<p><%= link_to "New list", "/lists/new", class:"btn btn-primary" %></p>
+  <div class="container text-center">
+    <ul class="row">
+      <% @lists.each do |list| %>
+        <% if list.photo.attached? %>
+        <div class="row first-row">
+          <div class="col-6 list-image"
+          style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')">
+        </div>
+          <div class="col-6">
+            <div class="row">
+              <div class="col-6 text-align-center">
+          <% else %>
+          <div class="col-6">
+            <div class="row first-row">
+              <div class="col-6">
+          <% end %>
+                <li><%= link_to list.name, "/lists/#{list.id}" %></li>
+                <p class="delete-button btn btn-warning"><%= link_to "Delete list",
+                  list_path(list),
+                  data: {turbo_method: :delete, turbo_confirm: "Delete #{list.name}?"} %></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% end %>
+    </ul>
+  </div>
+</div>
